# CrossMTP

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  dragStore.ts  i18n.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AdbPanel.tsx  Banner.tsx  Browser.tsx  LocalBrowser.tsx  QueuePanel.tsx
crates/adb-session/: Cargo.toml
crates/adb-session/src/: capability.rs  conflict_planner.rs  device_caps.rs  devices.rs  discovery.rs  error.rs  lib.rs  manifest.rs  process.rs  session.rs  tar_upload.rs
crates/mtp-cli/: Cargo.toml
crates/mtp-cli/src/: main.rs
crates/mtp-probe/: Cargo.toml  build.rs
crates/mtp-probe/src/: main.rs
crates/mtp-session/: Cargo.toml  build.rs
crates/mtp-session/src/: capability.rs  error.rs  ffi.rs  lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/tar-stream/: Cargo.toml
crates/tar-stream/src/: conflict.rs  error.rs  exclude.rs  header.rs  lib.rs  path.rs  progress.rs  sanitize.rs  stream.rs  traversal.rs
docs/: cross-mtp-dev-plan.md  install.md  plan.md  test-checklist.md  troubleshooting.md
docs/retrospectives/: adb-phase-0.md  adb-phase-1.md  adb-phase-2.md  adb-phase-3.md  adb-phase-4.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
scripts/: adb-phase0-probe.sh  adb-phase0-throughput.sh  phase1-verify.sh
