[package]
name = "crossmtp-desktop"
version.workspace = true
edition.workspace = true
description = "CrossMTP macOS desktop app (Tauri shell)"

[lib]
name = "crossmtp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "crossmtp-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

mtp-session = { path = "../../../crates/mtp-session" }
orchestrator = { path = "../../../crates/orchestrator" }
adb-session = { path = "../../../crates/adb-session" }
tar-stream = { path = "../../../crates/tar-stream" }

[lints]
workspace = true
